test/classes/initializers/oldAndNew3.good
oldAndNew3.chpl:9: error: Definition of both constructor 'badClass' and initializer 'init'.  Please choose one.
